@@ -2,7 +2,7 @@
 #
 # Win32::API - Perl Win32 API Import Facility
 # ^^^^^^^^^^
-# Version: 0.46 (23 Dec 2006)
+# Version: 0.47 (12 Nov 2007)
 # by Aldo Calpini <dada@perl.it>
 #
 # Current maintainer:
